--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
@@ -88,7 +88,7 @@
                     </p:rowExpansion>
 
                     <p:column width="45">                    
-                        <p:splitButton  icon="ui-icon-search" value="#{bundle.View}" title="#{bundle.Commands}" 
+                        <p:splitButton  value="#{bundle.View}" title="#{bundle.Commands}" 
                                         actionListener="#{_bean.onViewAttache(attache)}">
                             <p:menuitem icon="ui-icon-pencil" value="#{bundle.EditFile}"
                                         rendered="#{attache.id != null}"
