--- a/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
@@ -71,7 +71,7 @@
         </p:tab> 
         <p:tab title="#{bundle.Documents}"> 
             <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12">
-                <ui:include src="/view/docs/docs-list.xhtml" >
+                <ui:include src="/view/docs/doc-list.xhtml" >
                     <ui:param name="_docs" value="#{_bean.editedItem.docsList}" />
                 </ui:include>
             </p:panelGrid>
