--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -131,7 +131,7 @@
 
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"/>
-                        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding">
+                        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" dynamic="true" cache="true">
                             <ui:insert name="page_body">Body<br /></ui:insert>
                             <ui:include src="/view/common/dict-rights.xhtml"/>
                             <ui:include src="/view/common/dict-info.xhtml"/>
