--- a/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
@@ -8,9 +8,9 @@
         <p:commandButton id="#{_itemPanel}_btn" 
                          process="#{_itemPanel}_btn"
                          onstart="PF('statusDialog').show()"
-                         oncomplete="PF('statusDialog').hide();"
+                          oncomplete="PF('statusDialog').hide();"
                          actionListener="#{_selectorBean.onOneSelectItem()}" style="display: none;">
-            <p:ajax event="dialogReturn" listener="#{_bean[_actionSelect]}"                     
+            <p:ajax event="dialogReturn" listener="#{_bean[_actionSelect]}" 
                     update="#{_update} #{_itemPanel}"/>
         </p:commandButton>
         <p:commandButton id="#{_itemPanel}_btnOpenCard" actionListener="#{_selectorBean.prepEditItem(_itemValue)}"
@@ -23,13 +23,17 @@
         <h:panelGrid id="#{_itemPanel}" columns="2" columnClasses="ui-grid-col-10 col-padding, ui-grid-col-2 col-padding pull-right"
                      styleClass="ui-grid-col-12 col-padding" style="border-collapse: collapse; border:0px;">
             
-            <p:inputText value="#{_itemValue.fullName}" title="#{_titleItem}" styleClass="ui-grid-col-12"
-                         disabled="#{_disabled}" style="color: blue;"
-                         readonly="true"
-                         valueChangeListener="#{_bean[_actionSelect]}"  
-                         required="#{param['isRequired'] == _required}" 
-                         requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}">
-            </p:inputText>
+            <p:selectOneMenu value="#{_itemValue}" title="#{_titleItem}" styleClass="ui-grid-col-12"
+                             disabled="#{_disabled}" style="color: blue;"
+                             valueChangeListener="#{_bean[_actionSelect]}"                             
+                             required="#{param['isRequired'] == _required}" 
+                             requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}"
+                             filter="true" filterMatchMode="startsWith">
+                <p:ajax update="#{_itemPanel} #{_update}" partialSubmit="true" oncomplete="itemChange = 1;"/>
+                <f:selectItems value="#{_items}" var="item" itemValue="#{item}" itemLabel="#{item.nameEndElipse}"/>
+                <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
+                <f:converter converterId="#{_converter}" />
+            </p:selectOneMenu>
 
             <p:splitButton  icon="ui-icon-extlink" disabled="#{_disabled}" title="#{bundle.Select}"
                             styleClass="ui-grid-col-12" style="float: right;"
