--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -12,19 +12,44 @@
                 return;
             }
         }
-        function clearSearche(){
+        function clearSearche(){            
+            PF('nameSearche').jq.val("");            
+            PF('authorSearche').selectValue();
+            var dateCreateStartSearche = PF('dateCreateStartSearche');
+            if (dateCreateStartSearche){
+                PF('dateCreateStartSearche').setDate();
+            }
+            var dateCreateEndSearche = PF('dateCreateEndSearche');
+            if (dateCreateEndSearche){
+                PF('dateCreateEndSearche').setDate();
+            }
+            var dateChangeStartSearche = PF('dateChangeStartSearche');
+            if (dateChangeStartSearche){
+                PF('dateChangeStartSearche').setDate();
+            }
+            var dateChangeEndSearche = PF('dateChangeEndSearche');
+            if (dateChangeEndSearche){
+                PF('dateChangeEndSearche').setDate();
+            }
             PF('cbDateCreate').uncheck();
-            PF('cbDateChange').uncheck();
+            PF('cbDateChange').uncheck(); 
             var dateDoc = PF('cbDateDoc');
             if (dateDoc){
-                PF('cbDateDoc').uncheck();
-            }
-            var docType = PF('cbmDocType');
-            if (docType){
+                var dateDocStartSearche = PF('dateDocStartSearche');
+                if (dateDocStartSearche){
+                    PF('dateDocStartSearche').setDate();
+                };
+                var dateDocEndSearche = PF('dateDocEndSearche');
+                if (dateDocEndSearche){
+                    PF('dateDocEndSearche').setDate();
+                }
+                PF('cbDateDoc').uncheck();    
                 PF('cbmDocType').show();            
                 PF('cbmDocType').uncheckAll();
                 PF('cbmDocType').hide();
-            }
+                PF('docNumberSearche').jq.val("");
+                PF('partnerSearche').selectValue();
+            }            
         }    
     </script> 
 
@@ -83,7 +108,7 @@
 
             <p:outputLabel value="#{bundle.Name}"/>
             <h:panelGroup styleClass="ui-grid-col-12">
-                <p:inputText id="nameSearche" 
+                <p:inputText id="nameSearche" widgetVar="nameSearche"
                              value="#{explorerBean.model.nameSearche}"
                              styleClass="ui-grid-col-12"
                              onkeypress="keyPress();">
@@ -95,6 +120,7 @@
 
             <p:outputLabel value="#{bundle.Owner}"/>
             <p:selectOneMenu value="#{explorerBean.model.authorSearche}" filter="true" converter="usersConvertor" 
+                             widgetVar="authorSearche"
                              styleClass="ui-grid-col-12">
                 <f:selectItems value="#{userBean.findAll()}" var="user" itemValue="#{user}" itemLabel="#{user.shortFIO}" />
                 <f:selectItem value="#{null}" itemLabel="#{bundle.NotSpecified}" itemValue="#{null}"/>
@@ -102,12 +128,14 @@
 
             <p:outputLabel value="#{bundle.States}"/>
             <p:selectManyMenu id="stateChecks" value="#{explorerBean.model.stateSearche}" showCheckbox="true"
-                                label="#{bundle.Select}" converter="stateConvertor"
-                                styleClass="ui-grid-col-12">
+                              widgetVar="stateSearche"
+                              label="#{bundle.Select}" converter="stateConvertor"
+                              styleClass="ui-grid-col-12">
                 <f:selectItems value="#{_searcheBean.metadatesObj.statesList}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}"/>
             </p:selectManyMenu>
 
-            <p:selectBooleanCheckbox itemLabel="#{bundle.DateCreate}" id="cbDateCreate" widgetVar="cbDateCreate"
+            <p:selectBooleanCheckbox itemLabel="#{bundle.DateCreate}" id="cbDateCreate" 
+                                     widgetVar="cbDateCreate"
                                      title="#{bundle.SearcheDateCreate}"  
                                      value="#{explorerBean.model.dateCreateSearche}">
                 <p:ajax event="change" update="pnDateCreateSearche"/>
@@ -118,6 +146,7 @@
                              rendered="#{explorerBean.model.dateCreateSearche}">
                     #{bundle.With}
                     <p:calendar value="#{explorerBean.model.dateCreateStart}" id="dateCreateStart" 
+                                widgetVar="dateCreateStartSearche"
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
                                 locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateCreateSearche and param['isRequired'] == 'true'}"
@@ -129,6 +158,7 @@
                              rendered="#{explorerBean.model.dateCreateSearche}">
                     #{bundle.At}
                     <p:calendar value="#{explorerBean.model.dateCreateEnd}" id="dateCreateEnd" 
+                                widgetVar="dateCreateEndSearche"
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
                                 locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateCreateSearche and param['isRequired'] == 'true'}"
@@ -138,7 +168,8 @@
                 </p:panelGrid>
             </h:panelGroup>
             
-            <p:selectBooleanCheckbox itemLabel="#{bundle.DateChange}" id="cbDateChange" widgetVar="cbDateChange"
+            <p:selectBooleanCheckbox itemLabel="#{bundle.DateChange}" id="cbDateChange" 
+                                     widgetVar="cbDateChange"
                                      title="#{bundle.SearcheDateChange}" 
                                      value="#{explorerBean.model.dateChangeSearche}">
                 <p:ajax event="change" update="pnDateChangeSearche"/>
@@ -147,7 +178,8 @@
             <h:panelGroup id="pnDateChangeSearche">          
                 <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" rendered="#{explorerBean.model.dateChangeSearche}">
                     #{bundle.With}
-                    <p:calendar value="#{explorerBean.model.dateChangeStart}" id="dateChangeStart" 
+                    <p:calendar value="#{explorerBean.model.dateChangeStart}" id="dateChangeStart"
+                                widgetVar="dateChangeStartSearche"
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20"
                                 locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateChangeSearche and param['isRequired'] == 'true'}"
@@ -158,6 +190,7 @@
                 <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" rendered="#{explorerBean.model.dateChangeSearche}">
                     #{bundle.At}
                     <p:calendar value="#{explorerBean.model.dateChangeEnd}" id="dateChangeEnd"
+                                widgetVar="dateChangeEndSearche"
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
                                 locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateChangeSearche and param['isRequired'] == 'true'}"
